# bank-database-dio-course-test

./: README.md  pyproject.toml
parte1/: sqlalchemy_app.py
parte2/: pymongo_app.py
